# my_chat_server

./: .gitignore
chat_server/: CMakeLists.txt  config.ini
chat_server/src/: asio_context_pool.h  chat_server.cpp  chat_server.h  chat_session.cpp  chat_session.h  config_manager.cpp  config_manager.h  global.h  logic_system.cpp  logic_system.h  main.cpp  message_node.cpp  message_node.h  mysql_dao.cpp  mysql_dao.h  mysql_manager.cpp  mysql_manager.h  redis_manager.cpp  status_grpc_client.cpp  status_grpc_client.h
chat_server/src/messages/: CMakeLists.txt
gate_server/: CMakeLists.txt  config.ini
gate_server/src/: asio_context_pool.cpp  config_manager.cpp  config_manager.h  gate_server.cpp  gate_server.h  global.h  http_connection.cpp  http_connection.h  logic_system.cpp  logic_system.h  main.cpp  mysql_dao.cpp  mysql_dao.h  mysql_manager.cpp  mysql_manager.h  status_grpc_client.cpp  status_grpc_client.h  utils.h  varify_grpc_client.cpp  varify_grpc_client.h
gate_server/src/messages/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
status_server/: CMakeLists.txt  config.ini
status_server/src/: global.h  main.cpp  redis_manager.h  singleton.h  status_server_impl.cpp  status_server_impl.h
status_server/src/messages/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
varify_server/: config.js  config.json  email.js  global.js  package-lock.json  package.json  proto.js  redis.js  server.js
